finished createMatchDf started second notebook for DB API

--- a/createMatchDf.ipynb
+++ b/createMatchDf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "id": "e8375b17",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "id": "beba6e3d",
    "metadata": {},
    "outputs": [],
@@ -151,57 +151,19 @@
     "    time.sleep(1)  # WICHTIG: Rate-Limit der OSM-API\n",
     "\n",
     "# Ergebnisse in DataFrame-Form\n",
-    "stations_df = pd.DataFrame.from_dict(station_data, orient=\"index\")\n",
-    "print(stations_df.head())\n"
+    "df_stations = pd.DataFrame.from_dict(station_data, orient=\"index\")\n",
+    "\n",
+    "# Reset the index so that the city names become a column\n",
+    "df_stations = df_stations.reset_index().rename(columns={\"index\": \"city\"})\n",
+    "\n",
+    "# merge \n",
+    "df_teams = df_stadiums.merge(df_stations, how = \"left\", left_on = \"city\", right_on = \"city\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "a3251ada",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fuzzywuzzy import process\n",
-    "\n",
-    "# Dictionary: Stadium-Teamname → gewünschtes Match-Name\n",
-    "mapping_teamNames = {}\n",
-    "for m in df_matches[\"team_home\"].unique():\n",
-    "    match_best = process.extractOne(m, df_stadiums[\"team\"].unique())\n",
-    "    mapping_teamNames[match_best[0]] = m\n",
-    "\n",
-    "# df_stadiums direkt ersetzen oder neue Spalte erzeugen\n",
-    "df_stadiums[\"team_clean\"] = df_stadiums[\"team\"].replace(mapping_teamNames)\n",
-    "\n",
-    "# merge dfs\n",
-    "df_merged1 = df_matches.merge(df_stadiums, how = \"left\", left_on=\"team_home\", right_on=\"team_clean\", indicator=True)\n",
-    "\n",
-    "# add away city\n",
-    "df_merged2 = df_merged1.merge(df_stadiums[[\"team_clean\", \"city\"]].rename(columns = {\"city\":\"away_city\"}), how = \"left\", left_on=\"team_away\", right_on=\"team_clean\")\n",
-    "\n",
-    "# Überprüfen\n",
-    "## df_merged[df_merged[\"_merge\"] == \"left_only\"][\"team_home\"].unique()\n",
-    "## print(df_merged[\"_merge\"].value_counts())\n",
-    "\n",
-    "# Select Spalten\n",
-    "df_full = df_merged2[['match_id', 'league', 'date', 'matchday', 'team_home', 'team_away', 'stadium', 'capacity', 'city', 'away_city']].rename(columns = {'city':\"home_city\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44517aed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# only select 14. Spieltag (for testing)\n",
-    "df_try = df_full[df_full[\"matchday\"] == \"14. Spieltag\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ff703af",
+   "execution_count": 28,
+   "id": "a04b1f3c",
    "metadata": {},
    "outputs": [
     {
@@ -225,60 +187,150 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>stadium</th>\n",
+       "      <th>city</th>\n",
+       "      <th>capacity</th>\n",
        "      <th>station_name</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
+       "      <th>team_clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Berlin</th>\n",
-       "      <td>Berlin Hauptbahnhof</td>\n",
-       "      <td>52.525017</td>\n",
-       "      <td>13.369448</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Borussia Dortmund</td>\n",
+       "      <td>SIGNAL IDUNA PARK</td>\n",
+       "      <td>Dortmund</td>\n",
+       "      <td>81365</td>\n",
+       "      <td>Dortmund Hauptbahnhof</td>\n",
+       "      <td>51.517064</td>\n",
+       "      <td>7.461138</td>\n",
+       "      <td>Borussia Dortmund</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Frankfurt (Main)</th>\n",
+       "      <th>1</th>\n",
+       "      <td>FC Bayern München</td>\n",
+       "      <td>Allianz Arena</td>\n",
+       "      <td>München</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>München Hauptbahnhof</td>\n",
+       "      <td>48.140725</td>\n",
+       "      <td>11.556943</td>\n",
+       "      <td>FC Bayern München</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VfB Stuttgart</td>\n",
+       "      <td>MHPArena Stuttgart</td>\n",
+       "      <td>Stuttgart</td>\n",
+       "      <td>60449</td>\n",
+       "      <td>Stuttgart Hauptbahnhof</td>\n",
+       "      <td>48.784266</td>\n",
+       "      <td>9.182117</td>\n",
+       "      <td>VfB Stuttgart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Eintracht Frankfurt</td>\n",
+       "      <td>Deutsche Bank Park</td>\n",
+       "      <td>Frankfurt (Main)</td>\n",
+       "      <td>59500</td>\n",
        "      <td>Frankfurt (Main) Hauptbahnhof</td>\n",
        "      <td>50.106654</td>\n",
        "      <td>8.662581</td>\n",
+       "      <td>Eintracht Frankfurt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mönchengladbach</th>\n",
-       "      <td>Mönchengladbach Hauptbahnhof</td>\n",
-       "      <td>51.163220</td>\n",
-       "      <td>6.439669</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hamburg</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Hamburger SV</td>\n",
+       "      <td>Volksparkstadion</td>\n",
+       "      <td>Hamburg</td>\n",
+       "      <td>57000</td>\n",
        "      <td>Hamburg Hauptbahnhof</td>\n",
        "      <td>53.553199</td>\n",
        "      <td>10.006436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sinsheim</th>\n",
-       "      <td>Sinsheim Hauptbahnhof</td>\n",
-       "      <td>49.250168</td>\n",
-       "      <td>8.875500</td>\n",
+       "      <td>Hamburger SV</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   station_name        lat        lon\n",
-       "Berlin                      Berlin Hauptbahnhof  52.525017  13.369448\n",
-       "Frankfurt (Main)  Frankfurt (Main) Hauptbahnhof  50.106654   8.662581\n",
-       "Mönchengladbach    Mönchengladbach Hauptbahnhof  51.163220   6.439669\n",
-       "Hamburg                    Hamburg Hauptbahnhof  53.553199  10.006436\n",
-       "Sinsheim                  Sinsheim Hauptbahnhof  49.250168   8.875500"
+       "                  team             stadium              city  capacity  \\\n",
+       "0    Borussia Dortmund   SIGNAL IDUNA PARK          Dortmund     81365   \n",
+       "1    FC Bayern München       Allianz Arena           München     75000   \n",
+       "2        VfB Stuttgart  MHPArena Stuttgart         Stuttgart     60449   \n",
+       "3  Eintracht Frankfurt  Deutsche Bank Park  Frankfurt (Main)     59500   \n",
+       "4         Hamburger SV    Volksparkstadion           Hamburg     57000   \n",
+       "\n",
+       "                    station_name        lat        lon           team_clean  \n",
+       "0          Dortmund Hauptbahnhof  51.517064   7.461138    Borussia Dortmund  \n",
+       "1           München Hauptbahnhof  48.140725  11.556943    FC Bayern München  \n",
+       "2         Stuttgart Hauptbahnhof  48.784266   9.182117        VfB Stuttgart  \n",
+       "3  Frankfurt (Main) Hauptbahnhof  50.106654   8.662581  Eintracht Frankfurt  \n",
+       "4           Hamburg Hauptbahnhof  53.553199  10.006436         Hamburger SV  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_teams.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a3251ada",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fuzzywuzzy import process\n",
+    "\n",
+    "# Dictionary: Stadium-Teamname → gewünschtes Match-Name\n",
+    "mapping_teamNames = {}\n",
+    "for m in df_matches[\"team_home\"].unique():\n",
+    "    match_best = process.extractOne(m, df_stadiums[\"team\"].unique())\n",
+    "    mapping_teamNames[match_best[0]] = m\n",
+    "\n",
+    "# df_stadiums direkt ersetzen oder neue Spalte erzeugen\n",
+    "df_teams[\"team_clean\"] = df_teams[\"team\"].replace(mapping_teamNames)\n",
+    "\n",
+    "# merge dfs\n",
+    "df_merged1 = df_matches.merge(df_teams, how = \"left\", left_on=\"team_home\", right_on=\"team_clean\", indicator=True)\n",
+    "# Überprüfen\n",
+    "## df_merged[df_merged[\"_merge\"] == \"left_only\"][\"team_home\"].unique()\n",
+    "## print(df_merged[\"_merge\"].value_counts())\n",
+    "\n",
+    "# add away city\n",
+    "df_merged2 = df_merged1.merge(df_teams[[\"team_clean\", \"city\", \"station_name\", \"lat\", \"lon\"]].rename(columns = {\"city\":\"away_city\", 'station_name':\"away_station\", 'lat':\"away_lat\", 'lon':\"away_lon\"}), how = \"left\", left_on=\"team_away\", right_on=\"team_clean\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Select Spalten\n",
+    "df_full = df_merged2[['match_id', 'league', 'date', 'matchday', 'team_home', 'team_away', 'stadium', 'capacity', 'city', 'away_city', \"station_name\", \"lat\", \"lon\", \"away_station\", \"away_lat\", \"away_lon\"]].rename(columns = {'city':\"home_city\", 'station_name':\"home_station\", 'lat':\"home_lat\", 'lon':\"home_lon\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d6f6179f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full.to_csv(\"matchInfos.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44517aed",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
