added second notebook for DB API

--- a/createMatchDf.ipynb
+++ b/createMatchDf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "e8375b17",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "beba6e3d",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "ee8ddd00",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "a04b1f3c",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,6 @@
        "      <th>station_name</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
-       "      <th>team_clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -205,9 +204,8 @@
        "      <td>Dortmund</td>\n",
        "      <td>81365</td>\n",
        "      <td>Dortmund Hauptbahnhof</td>\n",
-       "      <td>51.517064</td>\n",
-       "      <td>7.461138</td>\n",
-       "      <td>Borussia Dortmund</td>\n",
+       "      <td>51.516939</td>\n",
+       "      <td>7.460503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -218,7 +216,6 @@
        "      <td>München Hauptbahnhof</td>\n",
        "      <td>48.140725</td>\n",
        "      <td>11.556943</td>\n",
-       "      <td>FC Bayern München</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -229,7 +226,6 @@
        "      <td>Stuttgart Hauptbahnhof</td>\n",
        "      <td>48.784266</td>\n",
        "      <td>9.182117</td>\n",
-       "      <td>VfB Stuttgart</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -240,7 +236,6 @@
        "      <td>Frankfurt (Main) Hauptbahnhof</td>\n",
        "      <td>50.106654</td>\n",
        "      <td>8.662581</td>\n",
-       "      <td>Eintracht Frankfurt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -251,7 +246,6 @@
        "      <td>Hamburg Hauptbahnhof</td>\n",
        "      <td>53.553199</td>\n",
        "      <td>10.006436</td>\n",
-       "      <td>Hamburger SV</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -265,15 +259,15 @@
        "3  Eintracht Frankfurt  Deutsche Bank Park  Frankfurt (Main)     59500   \n",
        "4         Hamburger SV    Volksparkstadion           Hamburg     57000   \n",
        "\n",
-       "                    station_name        lat        lon           team_clean  \n",
-       "0          Dortmund Hauptbahnhof  51.517064   7.461138    Borussia Dortmund  \n",
-       "1           München Hauptbahnhof  48.140725  11.556943    FC Bayern München  \n",
-       "2         Stuttgart Hauptbahnhof  48.784266   9.182117        VfB Stuttgart  \n",
-       "3  Frankfurt (Main) Hauptbahnhof  50.106654   8.662581  Eintracht Frankfurt  \n",
-       "4           Hamburg Hauptbahnhof  53.553199  10.006436         Hamburger SV  "
+       "                    station_name        lat        lon  \n",
+       "0          Dortmund Hauptbahnhof  51.516939   7.460503  \n",
+       "1           München Hauptbahnhof  48.140725  11.556943  \n",
+       "2         Stuttgart Hauptbahnhof  48.784266   9.182117  \n",
+       "3  Frankfurt (Main) Hauptbahnhof  50.106654   8.662581  \n",
+       "4           Hamburg Hauptbahnhof  53.553199  10.006436  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "a3251ada",
    "metadata": {},
    "outputs": [],
@@ -309,20 +303,18 @@
     "# add away city\n",
     "df_merged2 = df_merged1.merge(df_teams[[\"team_clean\", \"city\", \"station_name\", \"lat\", \"lon\"]].rename(columns = {\"city\":\"away_city\", 'station_name':\"away_station\", 'lat':\"away_lat\", 'lon':\"away_lon\"}), how = \"left\", left_on=\"team_away\", right_on=\"team_clean\")\n",
     "\n",
-    "\n",
-    "\n",
     "# Select Spalten\n",
     "df_full = df_merged2[['match_id', 'league', 'date', 'matchday', 'team_home', 'team_away', 'stadium', 'capacity', 'city', 'away_city', \"station_name\", \"lat\", \"lon\", \"away_station\", \"away_lat\", \"away_lon\"]].rename(columns = {'city':\"home_city\", 'station_name':\"home_station\", 'lat':\"home_lat\", 'lon':\"home_lon\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "d6f6179f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_full.to_csv(\"matchInfos.csv\")"
+    "df_full.to_csv(\"matchInfos.csv\", index=False)"
    ]
   },
   {
