added train connections through gtfs data from DELFI e.V.

--- a/createMatchDf.ipynb
+++ b/createMatchDf.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "ee8ddd00",
    "metadata": {},
    "outputs": [],
@@ -116,28 +116,26 @@
     "\n",
     "geolocator = Nominatim(user_agent=\"bundesliga-bahn-mapper\")\n",
     "\n",
-    "def find_nearest_station(city):\n",
+    "def find_city_coordinates(city, wait=1):\n",
+    "    \"\"\"\n",
+    "    Liefert die Koordinaten des Stadtzentrums.\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "        query = f\"{city} Hauptbahnhof\"\n",
-    "        location = geolocator.geocode(query)\n",
-    "        if location:\n",
+    "        city_loc = geolocator.geocode(city)\n",
+    "        if city_loc:\n",
+    "            # kleine Pause, um Rate-Limit zu respektieren\n",
+    "            time.sleep(wait)\n",
     "            return {\n",
-    "                \"station_name\": query,\n",
-    "                \"lat\": location.latitude,\n",
-    "                \"lon\": location.longitude\n",
+    "                \"city\": city,\n",
+    "                \"lat\": city_loc.latitude,\n",
+    "                \"lon\": city_loc.longitude\n",
     "            }\n",
     "        else:\n",
-    "            # fallback: Stadtzentrum\n",
-    "            city_loc = geolocator.geocode(city)\n",
-    "            if city_loc:\n",
-    "                return {\n",
-    "                    \"station_name\": f\"{city} (Zentrum)\",\n",
-    "                    \"lat\": city_loc.latitude,\n",
-    "                    \"lon\": city_loc.longitude\n",
-    "                }\n",
+    "            print(f\"Stadt {city} nicht gefunden.\")\n",
     "    except Exception as e:\n",
     "        print(f\"Fehler bei {city}: {e}\")\n",
     "    return None\n",
+    "\n",
     "\n",
     "# Alle einzigartigen Städte extrahieren\n",
     "cities = pd.Series(df_stadiums[\"city\"].dropna().unique()).tolist()\n",
